@@ -78,7 +78,10 @@ void PDFDocumentImage::drawPDFPage(GraphicsContext& context)
     bool allowsSmoothing = CGContextGetAllowsFontSmoothing(context.platformContext());
     bool allowsSubpixelQuantization = CGContextGetAllowsFontSubpixelQuantization(context.platformContext());
 
+#pragma clang diagnostic push
+#pragma clang diagnostic ignored "-Wdeprecated-declarations"
     [[m_document pageAtIndex:0] drawWithBox:kPDFDisplayBoxCropBox];
+#pragma clang diagnostic pop
 
     CGContextSetAllowsFontSmoothing(context.platformContext(), allowsSmoothing);
     CGContextSetAllowsFontSubpixelQuantization(context.platformContext(), allowsSubpixelQuantization);
