@@ -65,8 +65,6 @@
 #import <wtf/Assertions.h>
 #import <wtf/CurrentTime.h>
 
-#import <PDFKit/PDFKit.h>
-
 #ifdef __has_include
 #if __has_include(<ApplicationServices/ApplicationServicesPriv.h>)
 #import <ApplicationServices/ApplicationServicesPriv.h>
